--- a/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
+++ b/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
@@ -84,6 +84,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="MasterT.WPF.CrontabBuilder.nuspec" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
