--- a/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
+++ b/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
@@ -1,28 +1,49 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-
-	  <TargetFrameworks>net5.0-windows;netcoreapp3.1;net472</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;netcoreapp3.1;net472</TargetFrameworks>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
   </PropertyGroup>
+
+  <!-- Nuget specs -->
+  <PropertyGroup>
+    <PackageVersion>$(AssemblyVersion)</PackageVersion>
+    <PackageId>MasterT.WPF.CrontabBuilder</PackageId>
+    <Title>Crontab Control for WPF</Title>
+    <Authors>Master_T</Authors>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/tarockx/CrontabBuilder</PackageProjectUrl>
+    <Description>A basic reusable WPF Control to generate a Crontab string</Description>
+    <releaseNotes></releaseNotes>
+    <Copyright>Copyright 2021</Copyright>
+    <PackageTags>WPF Crontab</PackageTags>
+    <PackageReleaseNotes>
+      Multi-framework support
+      Introduced localization support
+      Added Danish localization
+    </PackageReleaseNotes>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="CronExpressionDescriptor" Version="2.16.0" />
   </ItemGroup>
 
 
-	<ItemGroup>
-		<Compile Update="Resources\UserControl_CrontabEditorControl.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>UserControl_CrontabEditorControl.en.resx</DependentUpon>
-			<DependentUpon>UserControl_CrontabEditorControl.da.resx</DependentUpon>
-			<DependentUpon>UserControl_CrontabEditorControl.resx</DependentUpon>
-		</Compile>
-	</ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\UserControl_CrontabEditorControl.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UserControl_CrontabEditorControl.en.resx</DependentUpon>
+      <DependentUpon>UserControl_CrontabEditorControl.da.resx</DependentUpon>
+      <DependentUpon>UserControl_CrontabEditorControl.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
 
-	<ItemGroup>
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
