--- a/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
+++ b/MasterT.WPF.CrontabBuilder/MasterT.WPF.CrontabBuilder.csproj
@@ -5,7 +5,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-		<AssemblyVersion>1.3.0.0</AssemblyVersion>
+		<AssemblyVersion>1.3.1.0</AssemblyVersion>
 	</PropertyGroup>
 
 	<!-- Nuget specs -->
@@ -19,12 +19,10 @@
 		<PackageProjectUrl>https://github.com/tarockx/CrontabBuilder</PackageProjectUrl>
 		<Description>A basic reusable WPF Control to generate a Crontab string</Description>
 		<releaseNotes></releaseNotes>
-		<Copyright>Copyright 2022</Copyright>
+		<Copyright>Copyright 2023</Copyright>
 		<PackageTags>WPF Crontab</PackageTags>
 		<PackageReleaseNotes>
-			Added "Every X seconds" mode
-			Added "Every nth day of the week" mode
-			Added properties to selectively show or hide every mode
+			Fixed a bug in the regular expression that failed to recognize some "every X seconds" crontab strings
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
